List all main modules, generate dot files
Issue #77