@@ -22,6 +22,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.UncheckedIOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayDeque;
 import java.util.Arrays;
@@ -207,13 +208,29 @@ public class Bach {
 
   /** Print summary. */
   public void summary(Project.Realm realm) {
+    out.println();
+    out.printf("+===%n");
+    out.printf("| Project %s %s summary%n", project.name, project.version);
+    out.printf("+===%n");
     var target = project.target(realm);
+    try {
+      for (var jar : Util.list(target.modules, Util::isJarFile)) {
+        out.printf("%5d %s %n", Files.size(jar), jar);
+      }
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
+    out.println();
+    var modulePath = project.modulePaths(target);
+    var names = String.join(",", realm.names());
+    var deps = new Command("jdeps").add("--module-path", modulePath).add("--multi-release", "BASE");
+    run(
+        deps.clone()
+            .add("-summary")
+            .add("--dot-output", target.directory.resolve("jdeps"))
+            .add("--add-modules", names));
     if (verbose) {
-      run(
-          new Command("jdeps")
-              .add("--module-path", project.modulePaths(target))
-              .add("--multi-release", "BASE")
-              .add("--check", String.join(",", realm.names())));
+      run(deps.clone().add("--check", names));
     }
   }
 
